--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,22 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
   </head>
 
   <body>
+    <nav class="navbar navbar-light bg-light justify-content-between sticky-top">
+      <a class="navbar-brand"><i class="fa-solid fa-clapperboard"></i> WATCH MOVIE</a>
+      <form class="form-inline">
+        <%= link_to new_list_path do %>
+          <button class="btn btn-primary m-2 my-sm-0" type="submit">Create a new list</button>
+        <% end %>
+        <%= link_to root_path do %>
+          <button class="btn btn-outline-primary m-2 my-sm-0" type="submit">View all my lists</button>
+        <% end %>
+      </form>
+    </nav>
     <%= yield %>
   </body>
 </html>
