--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -9,7 +9,7 @@
 <div class="d-flex justify-content-center p-2">
   <div class="d-flex justify-content-around w-50">
       <% @lists.each do |list| %>
-        <div class="card-box" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_tag @article.photo.key, height: 300, crop: :fill%>');">
+        <div class="card-box" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_tag list.photo.key, height: 300, crop: :fill%>');">
           <p><%= list.name %></p>
           <div class="link"><%= link_to new_list_bookmark_path(list) do %>
             <button class="btn btn-primary">Add Film</button>
